--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Matriz</title>
+  <title>Previsão Tempo</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+
+
   <app-root></app-root>
+  <!-- <app-contatos></app-contatos> -->
 </body>
 </html>
